deployment.yaml

# PostgreSQL Database Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: todorovski11/demo
          ports:
            - containerPort: 9090  # Change this to 9090
---

# Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: todorovski11/demo
          ports:
            - containerPort: 8081  # Application's container port
      imagePullSecrets:
        - name: regcred

---

# Application Service
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: my-namespace
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80              # Exposed service port
      targetPort: 8081      # Application's container port
      nodePort: 30080       # NodePort for external access (adjust if needed)
  type: NodePort

---

# Database Service
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: my-namespace
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80           # The port that the service will expose
      targetPort: 9090   # The port where the application is listening
  type: NodePort        # Internal service for database
